--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>권기택 홈페이지1</title>
+    <title>rla  홈페이지1</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
@@ -18,31 +18,7 @@
     <![endif]-->
   </head>
   <body>
-
-<nav class="navbar navbar-default navbar-static-top">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        Gitaeks
-      </a>
-      <p class="navbar-text">권기택 개인홈페이지</p>
-    </div>
-  </div>
-</nav>
-<div class="container">
-
-    <div class="page-header">
-        <h1>웹서비스 html 템플릿</h1>
-    </div>
-
-    <ul>
-        <li><a href="http://gitaeks.github.io/bs-html-examples/" target="_blank">Bootstrap기반 반응형웹 html 템플릿</a></li>
-        <li><a href="http://gitaeks.github.io/rc-html-examples/" target="_blank">Ratchet 기반 모바일웹 html 템플릿</a></li>
-        <li><a href="http://gitaeks.github.io/bs-letter-examples/" target="_blank">부트스트랩 기반 이메일 양식</a></li>
-    </ul>
-
-</div>
-
+    김진명 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
