--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://jinmyongkim.github.io/">
   <meta property="og:title" content="1105 Portfolio"/>
   <meta property="og:description" content="Jinmyong Kim portfolio"/>
-  <meta property="og:image" content"img/1.jpg">
+  <meta property="og:image" content="img/choijong.JPG">
 </head>
 <body>
 
