--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <title>1105Portfolio</title>
 
   <meta name="robots" content="index">
-  <meta name="title" content"">
-  <meta name="keywords" content="">
-  <link rel="image_src" href="">
+  <meta name="title" content"1105Portfolio">
+  <meta name="keywords" content="designer,photo,design,music,image">
+  <meta name="description" content="inmyong Kim portfolio">
+  <link rel="image_src" href="img/choijong.JPG">
   <meta property="og:url" content="https://jinmyongkim.github.io/">
-  <meta property="og:title" content="1105 Portfolio"/>
+  <meta property="og:title" content="1105Portfolio"/>
   <meta property="og:description" content="Jinmyong Kim portfolio"/>
   <meta property="og:image" content="img/choijong.JPG">
 </head>
