--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://jinmyongkim.github.io/">
   <meta property="og:title" content="1105Portfolio"/>
   <meta property="og:description" content="Jinmyong Kim portfolio"/>
-  <meta property="og:image" content="img/choijong.JPG">
+  <meta property="og:image" content="img/choijong.jpg">
 </head>
 <body>
 
