--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="title" content"1105Portfolio">
   <meta name="keywords" content="designer,photo,design,music,image">
   <meta name="description" content="inmyong Kim portfolio">
-  <link rel="image_src" href="img/choijong.JPG">
+  <link rel="image_src" href="img/choijong.jpg">
   <meta property="og:url" content="https://jinmyongkim.github.io/">
   <meta property="og:title" content="1105Portfolio"/>
   <meta property="og:description" content="Jinmyong Kim portfolio"/>
